--- a/index.html
+++ b/index.html
@@ -1,121 +1,120 @@
-<h1><strong>   MARCOS GOMEZ VAZQUEZ   </strong></h1>
-<p>📍Barcelona, Spain</p>
-<p><a href="mailto:gomezmarcos99@gmail.com" target="_blank" rel="noopener">gomezmarcos99@gmail.com</a></p>
-<hr />
-<p><strong>     ABOUT ME<img style="float: left; border-width: 2px; border-style: inset;" src="./assets/images/profile.jpeg" alt="" width="150" height="192" /></strong></p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p><a href="https://github.com/mgv99" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/github.png" alt="" width="30" height="30" /></a><a href="https://www.linkedin.com/in/mgv99/" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/linkedin.png" alt="" width="30" height="30" /></a></p>
-<hr />
-<h2><strong>  EDUCATION  </strong></h2>
-<p><strong>BACHELOR'S DEGREE IN INFORMATICS ENGINEERING</strong></p>
-<table style="height: 250px; width: 95.213%; border-collapse: collapse; float: left;" border="0">
-<tbody>
-<tr>
-<td style="width: 2.35849%;"><strong><a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/upc.png" alt="" width="50" height="50" /></a></strong></td>
-<td style="width: 164.436%;">
-<p><strong><a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener">Polytechnic University of Catalonia (UPC)</a></strong>   09/2017 - 07/2021</p>
-<ul style="list-style-type: square;">
-<li>Barcelona School of Informatics (FIB)</li>
-<li>Specialization: <strong>Computing</strong></li>
-<li>Average grade: <strong>7.5/10</strong></li>
-</ul>
-</td>
-</tr>
-<tr>
-<td style="width: 2.35849%;"><strong><a href="https://www.ed.ac.uk/" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/uoe.png" alt="" width="50" height="50" /></a></strong></td>
-<td style="width: 164.436%;">
-<p><strong><a href="https://www.ed.ac.uk/" target="_blank" rel="noopener">The University of Edinburgh</a></strong>   09/2020 - 01/2021</p>
-<ul style="list-style-type: square;">
-<li>Erasmus exchange</li>
-<li>Studied <strong>Machine Learning and NLP</strong></li>
-</ul>
-</td>
-</tr>
-</tbody>
-</table>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<hr />
-<h2><strong>  WORK EXPERIENCE  </strong></h2>
-<table style="height: 250px; width: 95.213%; border-collapse: collapse; float: left;" border="0">
-<tbody>
-<tr>
-<td style="width: 2.35849%;"><strong><a href="https://xatkit.com/" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/xatkit.png" alt="" width="50" height="50" /></a></strong></td>
-<td style="width: 164.436%;">
-<p><strong><a href="https://xatkit.com/" target="_blank" rel="noopener">XATKIT</a></strong>   Since 02/2021</p>
-<ul style="list-style-type: square;">
-<li>Internship holder</li>
-<li>NLP research</li>
-<li>Chatbot development</li>
-</ul>
-</td>
-</tr>
-<tr>
-<td style="width: 2.35849%;"><strong><a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/fib.png" alt="" width="50" height="50" /></a></strong></td>
-<td style="width: 164.436%;">
-<p><strong><a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener">Barcelona School of Informatics (FIB) - UPC</a></strong>   09/2019 - 01/2020</p>
-<ul style="list-style-type: square;">
-<li>Scholarship holder at the International Relationships Department</li>
-<li>Documentation and DB management. Supporting the incoming exchange students</li>
-</ul>
-</td>
-</tr>
-<tr>
-<td style="width: 2.35849%;"><strong><a href="https://academiasolnord.com/es/" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/sol.jpeg" alt="" width="50" height="50" /></a></strong></td>
-<td style="width: 164.436%;">
-<p><strong><a href="https://academiasolnord.com/es/" target="_blank" rel="noopener">Academia Sol Nord Barcelona</a></strong>    2019</p>
-<ul style="list-style-type: square;">
-<li>First-year university students programming teacher</li>
-<li>C++ and OOP</li>
-</ul>
-</td>
-</tr>
-</tbody>
-</table>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-<hr />
-<h2><strong>  PROJECTS  </strong></h2>
-<ul style="list-style-type: square;">
-<li><strong>Github</strong></li>
-</ul>
-<hr />
-<h2><strong>  SKILLS  </strong></h2>
-<ul style="list-style-type: square;">
-<li><strong>Java</strong></li>
-<li><strong>Python</strong></li>
-</ul>
-<hr />
-<h2><strong>  LANGUAGES  </strong></h2>
-<ul style="list-style-type: square;">
-<li>Spanish</li>
-<li>Catalan</li>
-<li>English</li>
-</ul>
-<hr />
-<h2><strong>  INTERESTS  </strong></h2>
-<ul style="list-style-type: square;">
-<li><strong>FIlms</strong></li>
-<li><strong>Videogames</strong></li>
-</ul>
-<hr />
-<p> </p>
+<body style="font-family:arial;">
+   <h1><span style="color: #ffffff; background-color: #000000;"><strong>&nbsp; &nbsp;MARCOS GOMEZ VAZQUEZ&nbsp; &nbsp;</strong></span></h1>
+   <p>📍Barcelona, Spain</p>
+   <p><a href="mailto:gomezmarcos99@gmail.com" target="_blank" rel="noopener">gomezmarcos99@gmail.com</a></p>
+   <hr />
+   <p><strong>&nbsp; &nbsp; &nbsp;ABOUT ME<img style="float: left; border-width: 2px; border-style: inset;" src="./assets/images/profile.jpeg" alt="" width="150" height="192" /></strong></p>
+   <p>&nbsp; &nbsp; &nbsp;HelloWorld!</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p><a href="https://github.com/mgv99" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/github.png" alt="" width="30" height="30" /></a><a href="https://www.linkedin.com/in/mgv99/" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/linkedin.png" alt="" width="30" height="30" /></a></p>
+   <hr />
+   <h2><span style="background-color: #000000; color: #ffffff;"><strong>&nbsp; EDUCATION&nbsp;&nbsp;</strong></span></h2>
+   <p><strong>BACHELOR'S DEGREE IN INFORMATICS ENGINEERING</strong></p>
+   <table style="height: 250px; width: 95.213%; border-collapse: collapse; float: left;" border="0">
+      <tbody>
+         <tr>
+            <td style="width: 2.35849%;"><strong><a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/upc.png" alt="" width="50" height="50" /></a></strong></td>
+            <td style="width: 164.436%;">
+               <p><strong><a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener">Polytechnic University of Catalonia (UPC)</a></strong>&nbsp; &nbsp;09/2017 - 07/2021</p>
+               <ul style="list-style-type: square;">
+                  <li>Barcelona School of Informatics (FIB)</li>
+                  <li>Specialization: <strong>Computing</strong></li>
+                  <li>Average grade:&nbsp;<strong>7.5/10</strong></li>
+               </ul>
+            </td>
+         </tr>
+         <tr>
+            <td style="width: 2.35849%;"><strong><a href="https://www.ed.ac.uk/" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/uoe.png" alt="" width="50" height="50" /></a></strong></td>
+            <td style="width: 164.436%;">
+               <p><strong><a href="https://www.ed.ac.uk/" target="_blank" rel="noopener">The University of Edinburgh</a></strong>&nbsp; &nbsp;09/2020 - 01/2021</p>
+               <ul style="list-style-type: square;">
+                  <li>Erasmus exchange</li>
+                  <li>Studied <strong>Machine Learning and NLP</strong></li>
+               </ul>
+            </td>
+         </tr>
+      </tbody>
+   </table>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <hr />
+   <h2><span style="background-color: #000000; color: #ffffff;"><strong>&nbsp; WORK EXPERIENCE&nbsp;&nbsp;</strong></span></h2>
+   <table style="height: 250px; width: 95.213%; border-collapse: collapse; float: left;" border="0">
+      <tbody>
+         <tr>
+            <td style="width: 2.35849%;"><strong><a href="https://xatkit.com/" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/xatkit.png" alt="" width="50" height="50" /></a></strong></td>
+            <td style="width: 164.436%;">
+               <p><strong><a href="https://xatkit.com/" target="_blank" rel="noopener">XATKIT</a></strong>&nbsp; &nbsp;Since 02/2021</p>
+               <ul style="list-style-type: square;">
+                  <li>Internship holder</li>
+                  <li>NLP research</li>
+                  <li>Chatbot development</li>
+               </ul>
+            </td>
+         </tr>
+         <tr>
+            <td style="width: 2.35849%;"><strong><a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/fib.png" alt="" width="50" height="50" /></a></strong></td>
+            <td style="width: 164.436%;">
+               <p><strong><a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener">Barcelona School of Informatics (FIB) - UPC</a></strong>&nbsp; &nbsp;09/2019 - 01/2020</p>
+               <ul style="list-style-type: square;">
+                  <li>Scholarship holder at the International Relationships Department</li>
+                  <li>Documentation and DB management. Supporting the incoming exchange students</li>
+               </ul>
+            </td>
+         </tr>
+         <tr>
+            <td style="width: 2.35849%;"><strong><a href="https://academiasolnord.com/es/" target="_blank" rel="noopener"><img style="margin-left: 10px; margin-right: 10px;" src="./assets/images/sol.jpeg" alt="" width="50" height="50" /></a></strong></td>
+            <td style="width: 164.436%;">
+               <p><strong><a href="https://academiasolnord.com/es/" target="_blank" rel="noopener">Academia Sol Nord Barcelona</a></strong>&nbsp; &nbsp; 2019</p>
+               <ul style="list-style-type: square;">
+                  <li>First-year university students programming teacher</li>
+                  <li>C++ and OOP</li>
+               </ul>
+            </td>
+         </tr>
+      </tbody>
+   </table>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;&nbsp;</p>
+   <hr />
+   <h2><span style="color: #ffffff; background-color: #000000;"><strong>&nbsp; PROJECTS&nbsp;&nbsp;</strong></span></h2>
+   <ul style="list-style-type: square;">
+      <li><a href="https://github.com/mgv99"><strong>Github</strong></a></li>
+   </ul>
+   <hr />
+   <h2><span style="color: #ffffff; background-color: #000000;"><strong>&nbsp; SKILLS&nbsp;&nbsp;</strong></span></h2>
+   <ul style="list-style-type: square;">
+      <li><strong>Java</strong></li>
+      <li><strong>Python</strong></li>
+   </ul>
+   <hr />
+   <h2><span style="background-color: #000000; color: #ffffff;"><strong>&nbsp; LANGUAGES&nbsp;&nbsp;</strong></span></h2>
+   <ul style="list-style-type: square;">
+      <li>Spanish</li>
+      <li>Catalan</li>
+      <li>English</li>
+   </ul>
+   <hr />
+   <h2><span style="color: #ffffff; background-color: #000000;"><strong>&nbsp; INTERESTS&nbsp;&nbsp;</strong></span></h2>
+   <ul style="list-style-type: square;">
+      <li><strong>Films</strong></li>
+      <li><strong>Videogames</strong></li>
+   </ul>
+   <hr />
+   <p>&nbsp;</p>
+</body>
