add natural languages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
     </p>
 
     <h2>Programming languages</h2>
+    <p>
         Java, Python, C, C++, Haskell, Prolog, SQL, JavaScript, etc.
+    </p>
+
+    <h2>Natural languages</h2>
+    <p>
+        English, Spanish, Catalan
+    </p>
 
     <h2>Contact Details</h2>
     <p>
