--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!--- Basic Page Needs
   ================================================== -->
-<meta charset="utf-8">
-<title>Marcos Gomez</title>
-<meta name="description" content="">
-<meta name="author" content="">
+<head>
+    <meta charset="utf-8">
+    <title>Marcos Gomez</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<!-- Mobile Specific Metas
-================================================== -->
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Mobile Specific Metas
+    ================================================== -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<!-- CSS
-================================================== -->
-<link rel="stylesheet" href="css/timeline.css">
-<link rel="stylesheet" href="css/styleee.css">
-<!-- Script
-================================================== -->
-<script src="js/script.js"></script>
+    <!-- CSS
+    ================================================== -->
+    <link rel="stylesheet" href="css/timeline.css">
+    <link rel="stylesheet" href="css/styleee.css">
+    <link rel="stylesheet" href="https://dev.xatkit.com/static/xatkit.min.css">
+    <!-- Script
+    ================================================== -->
+    <script src="js/script.js"></script>
+    <script src="https://dev.xatkit.com/static/xatkit.min.js"></script>
+    </script>
 
-</script>
-
-<!-- Favicons
- ================================================== -->
-<link rel="shortcut icon" href="favicon.png" >
+    <!-- Favicons
+     ================================================== -->
+    <link rel="shortcut icon" href="favicon.png" >
 
 </head>
 
@@ -39,6 +41,21 @@
 </header>
 
 <div class="container">
+
+    <!-- Mobile Specific Metas
+    ================================================== -->
+    <div id="xatkit-chat"></div>
+    <script>
+        xatkit.renderXatkitWidget({
+            server: "http://bodi.uoclabs.uoc.es:5003",
+            widget: {
+                title: "Marcos",
+                subtitle: "Ask me anything!",
+                startMinimized: true,
+            },
+            storage: { autoClear: true }
+        })
+    </script>
 
 
     <img id="profile-pic"  src="images/profilepic.jpg" width="250px" height="250px" align="right"/>
