add ecommerce xatkit server

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
   ================================================== -->
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Marcos Gomez</title>
     <meta name="description" content="">
     <meta name="author" content="">
@@ -48,7 +47,8 @@
     <div id="xatkit-chat"></div>
     <script>
         xatkit.renderXatkitWidget({
-            server: "http://bodi.uoclabs.uoc.es:5003",
+            server: "https://ecommerce-bot.xatkit.com/chat-handler",
+            apiKey: "36abe542-9878-439c-ae8f-2a7c4fe48f56",
             widget: {
                 title: "Marcos",
                 subtitle: "Ask me anything!",
