add chatbot style

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/timeline.css">
-    <link rel="stylesheet" href="css/styleee.css">
     <link rel="stylesheet" href="https://dev.xatkit.com/static/xatkit.min.css">
+    <link rel="stylesheet" href="css/xatkit.css">
     <!-- Script
     ================================================== -->
     <script src="js/script.js"></script>
@@ -50,11 +50,11 @@
             server: "https://ecommerce-bot.xatkit.com/chat-handler",
             apiKey: "36abe542-9878-439c-ae8f-2a7c4fe48f56",
             widget: {
-                title: "Marcos",
+                title: "Marcos' chatbot",
                 subtitle: "Ask me anything!",
-                startMinimized: true,
+                startMinimized: false,
             },
-            storage: { autoClear: true }
+            storage: { autoClear: false }
         })
     </script>
 
