add autoclear in chatbot

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 subtitle: "Ask me anything!",
                 startMinimized: false,
             },
-            storage: { autoClear: false }
+            storage: { autoClear: true }
         })
     </script>
 
