--- a/index.html
+++ b/index.html
@@ -50,44 +50,40 @@
             server: "https://ecommerce-bot.xatkit.com/chat-handler",
             apiKey: "36abe542-9878-439c-ae8f-2a7c4fe48f56",
             widget: {
-                title: "Marcos' chatbot",
-                subtitle: "Ask me anything!",
+                title: "Marcos' assistant",
+                subtitle: "Ask me anything",
                 startMinimized: false,
             },
             storage: { autoClear: true }
         })
     </script>
 
+    <table style="text-align: justify">
+        <tr>
+            <th>
+                <img id="profile-pic"  src="images/profilepic.jpg" width="250px" height="250px"/>
+            </th>
+            <td>
+                <h2>Hello World!</h2>
+                <p style="max-width: 400px; text-justify: inter-word">
+                    Born in 1999 and living in
+                    Barcelona, I'm an informatics
+                    enthusiast focusing my career on
+                    Machine Learning, with experience
+                    in the Natural Language
+                    Processing field.
+                    <br>
+                    <br>
+                    If you want to know more about me, check my resume, GitHub, or LinkedIn.
+                    <br>
+                    <br>
+                    Or you can chat with my personal assistant :)
+                </p>
+            </td>
+        </tr>
+    </table>
 
-    <img id="profile-pic"  src="images/profilepic.jpg" width="250px" height="250px" align="right"/>
 
-    <h2> Hello World! </h2>
-
-    <p>
-        Born in 1999 and living in
-        Barcelona, I'm an informatics
-        enthusiast focusing my career on
-        Machine Learning, with experience
-        in the Natural Language
-        Processing field.
-    </p>
-
-    <h2>Programming languages</h2>
-    <p>
-        Java, Python, C, C++, Haskell, Prolog, SQL, JavaScript, etc.
-    </p>
-
-    <h2>Natural languages</h2>
-    <p>
-        English, Spanish, Catalan
-    </p>
-
-    <h2>Contact Details</h2>
-    <p>
-        Marcos Gómez Vázquez <br>
-        Barcelona, Spain <br>
-        gomezmarcos99@gmail.com
-    </p>
 
     <!--
     <h2>Check out my Bachelor Thesis</h2>
