add min-width in img

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <table style="text-align: justify">
         <tr>
             <th>
-                <img id="profile-pic"  src="images/profilepic.jpg" width="250px" height="250px"/>
+                <img style="min-width: 250px; min-height: 250px;" id="profile-pic"  src="images/profilepic.jpg" width="250px" height="250px"/>
             </th>
             <td>
                 <h2>Hello World!</h2>
