--- a/index.html
+++ b/index.html
@@ -1,284 +1,1 @@
-<!--- Basic Page Needs
-  ================================================== -->
-<head>
-    <meta charset="utf-8">
-    <title>Marcos Gomez</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- Mobile Specific Metas
-    ================================================== -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-    <!-- CSS
-    ================================================== -->
-    <link rel="stylesheet" href="css/timeline.css">
-    <link rel="stylesheet" href="https://dev.xatkit.com/static/xatkit.min.css">
-    <link rel="stylesheet" href="css/xatkit.css">
-    <!-- Script
-    ================================================== -->
-    <script src="js/script.js"></script>
-    <script src="https://dev.xatkit.com/static/xatkit.min.js"></script>
-    </script>
-
-    <!-- Favicons
-     ================================================== -->
-    <link rel="shortcut icon" href="favicon.png" >
-
-</head>
-
-<header>
-    <div class="container">
-        <h1 class="logo">
-            MARCOS<span>GOMEZ</span>
-        </h1>
-        <section class="social">
-            <a target="_blank" rel="noopener" class="btn" href="https://www.github.com/mgv99">Github</a>
-            <a target="_blank" rel="noopener" class="btn" href="https://www.linkedin.com/in/mgv99/">LinkedIn</a>
-            <a target="_blank" rel="noopener" class="btn2" href="files/CV_Marcos_Gomez_Vazquez.pdf" >resume.pdf</a>
-        </section>
-    </div>
-</header>
-
-<div class="container">
-
-    <!-- Mobile Specific Metas
-    ================================================== -->
-    <div id="xatkit-chat"></div>
-    <script>
-        xatkit.renderXatkitWidget({
-            server: "https://ecommerce-bot.xatkit.com/chat-handler",
-            apiKey: "36abe542-9878-439c-ae8f-2a7c4fe48f56",
-            widget: {
-                title: "Marcos' assistant",
-                subtitle: "Ask me anything",
-                startMinimized: false,
-            },
-            storage: { autoClear: true }
-        })
-    </script>
-
-    <table style="text-align: justify">
-        <tr>
-            <th>
-                <img style="min-width: 250px; min-height: 250px;" id="profile-pic"  src="images/profilepic.jpg" width="250px" height="250px"/>
-            </th>
-            <td>
-                <h2>Hello World!</h2>
-                <p style="max-width: 400px; text-justify: inter-word">
-                    Born in 1999 and living in
-                    Barcelona, I'm an informatics
-                    enthusiast focusing my career on
-                    Machine Learning, with experience
-                    in the Natural Language
-                    Processing field.
-                    <br>
-                    <br>
-                    If you want to know more about me, check my resume, GitHub, or LinkedIn.
-                    <br>
-                    <br>
-                    Or you can chat with my personal assistant :)
-                </p>
-            </td>
-        </tr>
-    </table>
-
-
-
-    <!--
-    <h2>Check out my Bachelor Thesis</h2>
-    <h3>
-        <a target="_blank" rel="noopener" href="https://upcommons.upc.edu/handle/2117/351418">
-                Integrating natural language models in chatbot platforms
-        </a>
-    </h3>
-
-    <h2>Projects</h2>
-    <h3>
-        <a target="_blank" rel="noopener" href="ffffffffffffffffff">
-            PROP Compressor
-        </a>
-
-        <a target="_blank" rel="noopener" href="ffffffffffffffffff">
-            Skyline Bot
-        </a>
-
-        <a target="_blank" rel="noopener" href="ffffffffffffffffff">
-            4 en ralla Haskell
-        </a>
-
-        <a target="_blank" rel="noopener" href="ffffffffffffffffff">
-            Semaforos
-        </a>
-
-        <a target="_blank" rel="noopener" href="ffffffffffffffffff">
-            ASL Compiler
-        </a>
-
-        <a target="_blank" rel="noopener" href="ffffffffffffffffff">
-            xatkit-youtube-bot
-        </a>
-
-    </h3>
-    -->
-
-    <h1 class="project-name">MY TIMELINE</h1>
-
-    <div id="timeline">
-
-        <!-- UOC DATA SCIENCE
-        ================================================== -->
-        <div class="timeline-item">
-            <div class="timeline-icon" id="icon7" onmouseover='chg1("icon7")' onmouseout='chg2("icon7")'>
-                <a href="https://www.uoc.edu/" target="_blank" rel="noopener"><img src="images/uoc.png"/></a>
-            </div>
-            <div class="timeline-content right">
-                <h2>UNIVERSITAT OBERTA DE CATALUNYA</h2>
-                <br>
-                <h3>Master in Data Science</h3>
-                February 2022 - Present
-            </div>
-        </div>
-
-        <!-- SOM RESEARCH
-        ================================================== -->
-        <div class="timeline-item">
-            <div class="timeline-icon" id="icon6" onmouseover='chg1("icon6")' onmouseout='chg2("icon6")'>
-                <a href="https://som-research.uoc.edu/" target="_blank" rel="noopener"><img src="images/som.png"/></a>
-            </div>
-            <div class="timeline-content">
-                <h2>SOM RESEARCH LAB</h2>
-                <br>
-                <h3>Research Engineer</h3>
-                September 2021 – Present (Full time)
-                <p>
-                    <span id="more6" style="display: none">
-                        Currently working to ease open data access to every citizen through chatbots and NLP
-                    </span>
-                </p>
-                <a onclick='script("more6", "readMore6")' id="readMore6" class="btn" >read more</a>
-            </div>
-        </div>
-
-        <!-- XATKIT
-        ================================================== -->
-        <div class="timeline-item">
-            <div class="timeline-icon" id="icon5" onmouseover='chg1("icon5")' onmouseout='chg2("icon5")'>
-                <a href="https://xatkit.com/" target="_blank" rel="noopener"><img src="images/xatkit.jpeg"/></a>
-            </div>
-            <div class="timeline-content">
-                <h2>XATKIT</h2>
-                <br>
-                <h3>NLP Researcher</h3>
-                February 2021 - July 2021
-                <p>
-                    <span id="more5" style="display: none">
-                        Developed NLP tools, powered by language models, within this open source project that aims to be
-                        a reference platform for chatbot developement and deployment. These features can be easily
-                        integrated to the users chatbots. Some example tools are toxicity detection, language detection,
-                        or emoji sentiment analysis.
-                        <br>
-                        Also published several articles in the official blog
-                    </span>
-                </p>
-                <a onclick='script("more5", "readMore5")' id="readMore5" class="btn" >read more</a>
-            </div>
-        </div>
-
-        <!-- EDINBURGH
-        ================================================== -->
-        <div class="timeline-item">
-            <div class="timeline-icon" id="icon4" onmouseover='chg1("icon4")' onmouseout='chg2("icon4")'>
-                <a href="https://www.ed.ac.uk/" target="_blank" rel="noopener"><img src="images/uoe.png"/></a>
-            </div>
-            <div class="timeline-content right">
-                <h2>THE UNIVERSITY OF EDINBURGH</h2>
-                <br>
-                <h3>Bachelor's Degree in Informatics Engineering</h3>
-                September 2020 - December 2021
-                <p>
-                    <span id="more4" style="display: none">
-                        One semester Erasmus exchange
-                        <br>
-                        Studied Machine Learning and NLP (Postgraduate courses)
-                    </span>
-                </p>
-                <a onclick='script("more4", "readMore4")' id="readMore4" class="btn" >read more</a>
-            </div>
-        </div>
-
-        <!-- FIB BECARIO
-        ================================================== -->
-        <div class="timeline-item">
-            <div class="timeline-icon" id="icon3" onmouseover='chg1("icon3")' onmouseout='chg2("icon3")'>
-                <a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener"><img src="images/upc.png"/></a>
-            </div>
-            <div class="timeline-content">
-                <h2>BARCELONA SCHOOL OF INFORMATICS (FIB-UPC)</h2>
-                <br>
-                <h3>International Relationships Department </h3>
-                September 2019 - January 2020
-                <p>
-                    <span id="more3" style="display: none">
-                        Scholarship holder at the International Relationships Department.
-                        <br>
-                        I mainly developed documentation and DB management tasks.
-                        <br>
-                        Also supporting the incoming exchange students.
-                    </span>
-                </p>
-                <a onclick='script("more3", "readMore3")' id="readMore3" class="btn" >read more</a>
-            </div>
-        </div>
-
-        <!-- ACADEMIA SOL NORD
-        ================================================== -->
-        <div class="timeline-item">
-            <div class="timeline-icon" id="icon2" onmouseover='chg1("icon2")' onmouseout='chg2("icon2")'>
-                <a href="https://academiasolnord.com/" target="_blank" rel="noopener"><img src="images/sol.jpg"/></a>
-            </div>
-            <div class="timeline-content">
-                <h2>ACADEMIA SOL NORD</h2>
-                <br>
-                <h3>Reinforcement Teacher</h3>
-                September 2018 - January 2019
-                <p>
-                    <span id="more2" style="display: none">
-                        First-year university students programming teacher.
-                        <br>
-                        Helping them to pass the final exams :)
-                        <br>
-                        Mainly teaching C++ and OOP (Object Oriented Programming)
-                    </span>
-                </p>
-                <a onclick='script("more2", "readMore2")' id="readMore2" class="btn" >read more</a>
-                </p>
-            </div>
-        </div>
-
-        <!-- UPC GEI
-        ================================================== -->
-        <div class="timeline-item">
-            <div class="timeline-icon" id="icon1" onmouseover='chg1("icon1")' onmouseout='chg2("icon1")'>
-                <a href="https://www.fib.upc.edu/en" target="_blank" rel="noopener"><img src="images/upc.png"/></a>
-            </div>
-            <div class="timeline-content right">
-                <h2>UNIVERSITAT POLITÈCNICA DE CATALUNYA</h2>
-                <br>
-                <h3>Bachelor's Degree in Informatics Engineering</h3>
-                September 2017 - June 2021
-                <p>
-                    <span id="more1" style="display: none">
-                        Faculty: Barcelona School of Informatics (FIB)
-                        <br>
-                        Specialization: <strong>Computing</strong>
-                        <br>
-                        Average grade:&nbsp;<strong>7.5/10</strong>
-                    </span>
-                </p>
-                <a onclick='script("more1", "readMore1")' id="readMore1" class="btn" >Read more</a>
-            </div>
-        </div>
-
-    </div>
-</div>
+<iframe src='https://flo.uri.sh/story/1921808/embed' title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' style='width:100%;height:600px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe><div style='width:100%!;margin-top:4px!important;text-align:right!important;'></div>
