--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
-<iframe src='https://flo.uri.sh/story/1921808/embed' title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' style='width:100%;height:600px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe><div style='width:100%!;margin-top:4px!important;text-align:right!important;'></div>
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+
+    h1 {
+      text-align: center;
+    }
+
+
+    .container {
+      display: flex;
+    }
+
+    .iframe-wrapper {
+      flex: 1;
+      display: flex;
+    }
+
+    .iframe-wrapper iframe {
+      border: none; /* Optional: Removes the iframe border */
+    }
+  </style>
+</head>
+<body>
+
+  <h1 style="font-family: Arial, sans-serif;">
+    Visualizing CO2: Exploring Emissions Data Through Interactive Analysis
+  </h1>
+  <h3 style="font-family: Arial, sans-serif; text-align: center;">
+    All figures expressed in Millions of Tonnes
+  </h3>
+
+
+
+  <div class="container">
+    <div class="iframe-wrapper" style="margin-left: -130px">
+      <iframe src='https://flo.uri.sh/visualisation/14175054/embed' width="700" height="600" title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
+    </div>
+    <div class="iframe-wrapper" style="margin-right: 0px; margin-left: -100px">
+      <p style="font-family: Arial, sans-serif; font-size: 17px; text-align: justify;">
+        <br>
+        <br>
+        <br>
+        <br>
+        This web site is dedicated to providing comprehensive data visualizations on worldwide CO2 emissions. Our primary objective is to address crucial questions surrounding this critical issue. We delve into emissions analysis at various levels, including by country, emission sources and their evolution over time.
+        <br>
+        <br>
+        <br>
+        By examining CO2 emissions on a global scale, we aim to gain insights into the quantity of CO2 being released into the Earth's atmosphere. We explore emissions trends and patterns, allowing us to understand the current levels of CO2 emissions worldwide.
+        <br>
+        <br>
+        <br>
+        Moreover, our focus extends beyond the present. We strive to study the historical evolution of emissions, offering different perspectives on the growth of CO2 levels over time. This analysis raises important questions: What is the rate or speed at which emissions are increasing? Which countries have made significant contributions to this substantial growth in emissions? By reflecting on historical data, we can also explore future projections and potential outcomes.
+      </p>
+    </div>
+
+    <div class="iframe-wrapper">
+      <br>
+      <br>
+      <br>
+      <br>
+      <p style="font-family: Arial, sans-serif; margin-top: 75px; text-align: center; font-size: 17px;">
+        <strong style="font-size: 24px; "> Did you know?</strong>
+        <img src="https://i.ibb.co/YNTJ8gN/Screenshot-2023-06-23-at-13-14-04.png" alt="Flights and CO2 comparison" width="500" height="300" style="margin-top: 20px;">
+        <br>
+        <br>
+        <text> 1 Million flights is the equivalent to 2.750 daily flights during a whole year </text>
+      </p>
+    </div>
+  </div>
+
+  <iframe src='https://flo.uri.sh/visualisation/14174638/embed' title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' style='width:100%;height:600px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
+
+  <iframe src='https://flo.uri.sh/visualisation/14175178/embed' title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' style='width:100%;height:600px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
+
+
+
+  <div class="container">
+    <div class="iframe-wrapper">
+      <iframe src='https://flo.uri.sh/visualisation/14174543/embed' width="500" height="400" title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
+    </div>
+    <div class="iframe-wrapper">
+      <iframe src='https://flo.uri.sh/visualisation/13589668/embed' width="1200" height="500" title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
+    </div>
+  </div>
+
+  <iframe src='https://flo.uri.sh/visualisation/13590581/embed' title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' style='width:100%;height:600px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
+
+  <iframe src='https://flo.uri.sh/visualisation/14174418/embed' height="400" title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' style='width:100%;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
+
+  <hr>
+  <p style="font-family: Arial, sans-serif; text-align: center; font-size: 14px;">
+    <br>
+    Data visualization project for Visualización de datos, Master Universitario de Ciencia de Datos, Universitat Oberta de Catalunya
+    <br>
+    <br>
+    Source: <a href = https://www.kaggle.com/datasets/thedevastator/global-fossil-co2-emissions-by-country-2002-2022> https://www.kaggle.com/datasets/thedevastator/global-fossil-co2-emissions-by-country-2002-2022 </a>
+    <br>
+    <br>
+    By Marcos Gomez Vazquez
+    <br>
+
+
+  </p>
+
+</body>
+</html>
