--- a/co2.html
+++ b/co2.html
@@ -55,7 +55,7 @@
       </p>
     </div>
 
-    <div class="iframe-wrapper">
+    <div class="iframe-wrapper" style="margin-right: 0px; margin-left: 100px">
       <br>
       <br>
       <br>
