--- a/streamlit_comments.html
+++ b/streamlit_comments.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <title>Streamlit comments</title>
+  <style>
+    .notion-embed__container>iframe {
+        background-color: transparent !important;
+    }
+  </style>
 </head>
 <body>
 <div id="cusdis_thread"
