--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>-->
                 </ul>
             </div>
         </nav>
@@ -47,7 +47,16 @@
                     <div class="subheading mb-5">
                         Researcher & Engineer · Computer Science · Software Engineering
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">
+                        Welcome to my personal webpage! My name is Marcos, and I am graduated in Computer Science studies.
+                        <br>
+                        Currently, I am based in Luxembourg and working in multiple research projects in the fields of
+                        low-code and AI agents.
+                        <br>
+                        Here, you can find more information about my professional background, research interests, projects and publications.
+                        <br>
+                        I love tech, but I have a particular interest in Data Science, Software Engineering and AI. If you too, let's connect!
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/mgv99/"><span class="tooltip">LinkedIn</span><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/mgv99"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
@@ -64,7 +73,15 @@
                         <div class="flex-grow-1 me-md-3">
                             <h3 class="mb-0">BESSER</h3>
                             <div class="subheading mb-3">Open Source Low-code Platform</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>
+                                BESSER (BEtter Smart Software fastER) is an FNR-funded PEARL project, hosted via a joint
+                                structural collaboration lead by LIST and with the participation of SnT/UniLu.
+                                <br>
+                                <br>
+                                BESSER is a <a href="https://modeling-languages.com/welcome-to-the-low-modeling-revolution/">low-modeling</a> and <a href="https://modeling-languages.com/low-code-vs-model-driven/">low-code</a> open-source platform that enables users to model, generate,
+                                personalize and deploy smart and complex software systems.
+                                BESSER is based around our B-UML language and a number of generators built on top of it.
+                            </p>
                             <div class="social-icons">
                                 <a class="social-icon" href="https://github.com/BESSER-PEARL"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
                                 <a class="social-icon" href="https://besser.readthedocs.io/en/latest/"><span class="tooltip">Documentation</span><i class="fa-solid fa-book"></i></a>
@@ -76,9 +93,12 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1 me-md-3">
-                            <h3 class="mb-0">BESSER BOT FRAMEWORK</h3>
-                            <div class="subheading mb-3">Bot design and implementation with Python</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">BESSER AGENTIC FRAMEWORK</h3>
+                            <div class="subheading mb-3">Agent design and implementation with Python</div>
+                            <p>
+                                The BESSER Agentic Framework (BAF), formerly known as <a href="https://livablesoftware.com/besser-bot-framework/">Bot Framework</a>, is part of the BESSER project. It aims to make the
+                                design and implementation of agents easier and accessible for everyone.
+                            </p>
                             <div class="social-icons">
                                 <a class="social-icon" href="https://github.com/BESSER-PEARL/BESSER-Bot-Framework"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
                                 <a class="social-icon" href="https://besser-bot-framework.readthedocs.io/latest/"><span class="tooltip">Documentation</span><i class="fa-solid fa-book"></i></a>
@@ -90,8 +110,11 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1 me-md-3">
                             <h3 class="mb-0">AI SANDBOX LUXEMBOURG</h3>
-                            <div class="subheading mb-3">Open Source Low-code Platform</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <div class="subheading mb-3">Making better AI systems</div>
+                            <p>
+                                Making sure that AI systems used in the EU are safe, transparent, traceable, non-discriminatory and environmentally friendly is a critical issue on which LIST wants to contribute with its scientific and technological expertise.
+                                This AI Sandbox is designed to help the Luxembourg ecosystem grow awareness and capabilities to improve the trustworthiness of AI models and reduce the risks for their users.
+                            </p>
                             <div class="social-icons">
                                 <a class="social-icon" href="https://ai-sandbox.list.lu/"><span class="tooltip">Webpage</span><i class="fa-solid fa-globe"></i></a>
                                 <a class="social-icon" href="https://www.siliconluxembourg.lu/list-develops-ai-regulatory-sandboxes-and-releases-ethical-ai-leaderboard/"><span class="tooltip">Article</span><i class="fa-solid fa-link"></i></a>
@@ -103,8 +126,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1 me-md-3">
                             <h3 class="mb-0">DATABOT</h3>
-                            <div class="subheading mb-3">Bot design and implementation with Python</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <div class="subheading mb-3">Automatic generation of bots</div>
+                            <p>
+                                With this platform, you can create bots (or agents) to answer questions about a specific data source. It allows the automatic generation of a chat/voice bot swarm to attend all the data sources in an Open Data Portal.
+                            </p>
                             <div class="social-icons">
                                 <a class="social-icon" href="https://github.com/BESSER-PEARL/databot"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
                             </div>
@@ -115,8 +140,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1 me-md-3">
                             <h3 class="mb-0">XATKIT</h3>
-                            <div class="subheading mb-3">Bot design and implementation with Python</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <div class="subheading mb-3">Design it once, deploy it everywhere</div>
+                            <p>
+                                Xatkit is a java-based bot framework, created to reduce boilerplate code, complex API understanding, and technical details to facilitate the definition and deployment of your bots. Xatkit helps you focus on what really matters: the conversation logic you want to embed in your chatbot.
+                            </p>
                             <div class="social-icons">
                                 <a class="social-icon" href="https://github.com/xatkit-bot-platform/xatkit"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
                                 <a class="social-icon" href="https://xatkit.com/"><span class="tooltip">Webpage</span><i class="fa-solid fa-globe"></i></a>
@@ -321,6 +348,7 @@
             </section>
             <hr class="m-0" />
             <!-- Interests-->
+            <!--
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
@@ -329,6 +357,7 @@
                 </div>
             </section>
             <hr class="m-0" />
+            -->
             <!-- Awards-->
             <!--
             <section class="resume-section" id="awards">
