change picture and color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Marcos Gomez Vazquez</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.7.1/js/all.js" crossorigin="anonymous"></script>
@@ -19,8 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Marcos Gomez Vazquez</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="profile picture" /></span>
+                <span class="d-block d-lg-none">Home</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -40,27 +39,38 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">
-                        Marcos
-                        <span class="text-primary">Gomez Vazquez</span>
-                    </h1>
-                    <div class="subheading mb-5">
-                        Researcher & Engineer · Computer Science · Software Engineering
-                    </div>
-                    <p class="lead mb-5">
-                        Welcome to my personal webpage! My name is Marcos, and I am graduated in Computer Science studies.
-                        <br>
-                        Currently, I am based in Luxembourg and working in multiple research projects in the fields of
-                        low-code and AI agents.
-                        <br>
-                        Here, you can find more information about my professional background, research interests, projects and publications.
-                        <br>
-                        I love tech, but I have a particular interest in Data Science, Software Engineering and AI. If you too, let's connect!
-                    </p>
-                    <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/mgv99/"><span class="tooltip">LinkedIn</span><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/mgv99"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://scholar.google.com/citations?user=91m3OmMAAAAJ"><span class="tooltip">Google Scholar</span><i class="fab fa-google-scholar"></i></a>
+                    <div class="portada d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <img src="assets/img/profile.jpg" alt="profile picture" class="imagen-portada img-fluid  me-4" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); height: 500px; width: 333px; border-radius: 8px; align-self: center";/>
+                        <div class="flex-grow-1 me-md-3">
+                            <div class="titulo-portada">
+                                <h2>
+                                    Marcos
+                                    <span class="text-primary">Gomez Vazquez</span>
+                                </h2>
+                                <div class="subheading mb-5">
+                                    Researcher & Engineer · Computer Science
+                                </div>
+                            </div>
+                            <div class="descripcion-portada">
+                                <p class="lead mb-3">
+                                    👋 Welcome to my personal webpage! My name is Marcos, and I am graduated in Computer Science studies.
+                                </p>
+                                <p class="lead mb-3">
+                                    🇱🇺 Currently, I am based in Luxembourg and working in multiple research projects in the fields of low-code and AI agents.
+                                </p>
+                                <p class="lead mb-3">
+                                    🔍 Here, you can find more information about my professional background, research interests, projects and publications.
+                                </p>
+                                <p class="lead mb-3">
+                                    🤖 I love tech, but I have a particular interest in Data Science, Software Engineering and AI. If you too, let's connect!
+                                </p>
+                                <div class="social-icons">
+                                    <a class="social-icon" href="https://www.linkedin.com/in/mgv99/"><span class="tooltip">LinkedIn</span><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="social-icon" href="https://github.com/mgv99"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
+                                    <a class="social-icon" href="https://scholar.google.com/citations?user=91m3OmMAAAAJ"><span class="tooltip">Google Scholar</span><i class="fab fa-google-scholar"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -104,7 +114,7 @@
                                 <a class="social-icon" href="https://besser-bot-framework.readthedocs.io/latest/"><span class="tooltip">Documentation</span><i class="fa-solid fa-book"></i></a>
                             </div>
                         </div>
-                        <img src="assets/img/bbf.webp" alt="BESSER Bot Framework" class="img-fluid mt-3" style="max-width: 600px;">
+                        <img src="assets/img/bbf.webp" alt="BESSER Bot Framework" class="img-fluid mt-3" style="width: 600px;">
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -165,7 +175,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <p>
-                                <a href="https://doi.org/10.1145/3646548.3676599"><b></i>Exploring the Use of Software Product Lines for the Combination of Machine Learning Models</b></a>
+                                <a href="https://doi.org/10.1145/3646548.3676599"><b>Exploring the Use of Software Product Lines for the Combination of Machine Learning Models</b></a>
                                 <br>
                                 <b>Best Demonstrations and Tools Paper Award</b>
                                 <br>
@@ -204,6 +214,7 @@
                     <div class="subheading mb-4">Blog Posts</div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+
                             <a href="https://livablesoftware.com/how-to-use-llms-and-rag-in-a-chatbot/"><p>How to use LLMs and RAG in a chatbot?</p></a>
                             <a href="https://ingenieriadesoftware.es/lineas-de-producto-para-automatizar-la-combinacion-de-modelos-de-machine-learning/"><p>Líneas de producto para automatizar la combinación de modelos de Machine Learning</p></a>
                             <a href="https://modeling-languages.com/software-product-lines-for-the-combination-of-machine-learning-models/"><p>Software Product Lines to automate the Combination of Machine Learning Models</p></a>
