--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="subheading mb-4">Blog Posts</div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-
+                            <a href="https://livablesoftware.com/besser-agentic-framework/"><p>From Bots to Agents: a new open source Agentic Framework</p></a>
                             <a href="https://livablesoftware.com/how-to-use-llms-and-rag-in-a-chatbot/"><p>How to use LLMs and RAG in a chatbot?</p></a>
                             <a href="https://ingenieriadesoftware.es/lineas-de-producto-para-automatizar-la-combinacion-de-modelos-de-machine-learning/"><p>Líneas de producto para automatizar la combinación de modelos de Machine Learning</p></a>
                             <a href="https://modeling-languages.com/software-product-lines-for-the-combination-of-machine-learning-models/"><p>Software Product Lines to automate the Combination of Machine Learning Models</p></a>
